--- a/_scss/layout/_why-djangocon.scss
+++ b/_scss/layout/_why-djangocon.scss
@@ -27,6 +27,8 @@
 }
 
 .tutorials-block {
+  padding: 1rem;
+  
   .media-icon {
     float: left;
     margin-right: 1rem;
